--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
   	<artifactId>webdrivermanager</artifactId>
   	<version>6.2.0</version>
   </dependency>
-
+<dependency> 
+<groupId>org.projectlombok</groupId> 
+<artifactId>lombok</artifactId> 
+<version>1.18.30</version> 
+<scope>provided</scope>
+ </dependency> 
   </dependencies>
   
   	<profiles>
