--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>Qspider</groupId>
   <artifactId>FinalNinzaCRMGUIFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
+  <packaging>jar</packaging>
 <dependencies>
     
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
